# sssweb

./: .gitignore  Cargo.toml  README.md
.github/workflows/: ci.yaml
shamir-gf256/: Cargo.toml
shamir-gf256/src/: lib.rs  share_codec.rs
sssweb/: Cargo.toml  index.html
sssweb/src/: main.rs
sssweb/src/components/: copy_button.rs  information.rs  mod.rs  sss_decryption.rs  sss_encryption.rs  tab_menu.rs
