[package]
name = "sssweb"
version = "0.1.0"
edition = "2024"

[dependencies]
shamir-gf256 = {path = "../shamir-gf256"}
rand = "0.8.5"  # only if needed to avoid version conflicts
wasm-bindgen = "0.2"
yew = { version = "0.21", features = ["csr"] }
gloo = "0.11.0"
web-sys = { version = "0.3", features = ["HtmlInputElement","Window", "Navigator", "Clipboard"] }
yew-plotly = "0.3"
zeroize = "1.8.1"